--- a/funcAppMeyer/Base.lproj/Main.storyboard
+++ b/funcAppMeyer/Base.lproj/Main.storyboard
@@ -19,14 +19,6 @@
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="points earned" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="j60-yZ-DUv">
                                 <rect key="frame" x="32" y="306" width="122" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="out of " minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oil-cg-Uvd">
-                                <rect key="frame" x="221" y="306" width="122" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
@@ -43,8 +35,8 @@
                                 </attributedString>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNE-m1-9Xl">
-                                <rect key="frame" x="68" y="154" width="257" height="57"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNE-m1-9Xl">
+                                <rect key="frame" x="68" y="154" width="284" height="104"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
@@ -66,19 +58,26 @@
                                     <action selector="submitButtonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="NrG-lH-Ad4"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="out of " minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oil-cg-Uvd">
+                                <rect key="frame" x="221" y="306" width="122" height="34"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
                     <connections>
-                        <outlet property="pointsEarnedTextField" destination="gNE-m1-9Xl" id="6Di-xm-YX4"/>
-                        <outlet property="pointsPossibleTextField" destination="oil-cg-Uvd" id="zOY-Rw-zeS"/>
-                        <outlet property="resultLabel" destination="gNE-m1-9Xl" id="ocC-x7-mka"/>
+                        <outlet property="errorLabel" destination="1cm-aF-0c9" id="EHL-w4-Uho"/>
+                        <outlet property="pointsEarnedTextField" destination="j60-yZ-DUv" id="8h2-Ym-kg8"/>
+                        <outlet property="pointsPossibleTextField" destination="oil-cg-Uvd" id="OAt-AD-mNb"/>
+                        <outlet property="resultLabel" destination="gNE-m1-9Xl" id="kkS-NA-iMB"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="61.832061068702288" y="-2.1126760563380285"/>
+            <point key="canvasLocation" x="-54.198473282442748" y="-4.2253521126760569"/>
         </scene>
     </scenes>
     <resources>
